Fix spacing

--- a/src/assets/css/block/modal.css
+++ b/src/assets/css/block/modal.css
@@ -66,14 +66,14 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
   font-size: 0.75rem;
+  margin-bottom: 1rem;
   padding: 0.875rem 0.75rem;
 }
 
 .modal .modal__address-form input {
   border-radius: 0.25rem;
   font-size: inherit;
-  margin: 0.5rem 0px 0.75rem 0px;
-  padding: 0.375rem 0.75rem;
+  margin: 0.25rem 0px 0.5rem 0px;
 }
 
 .modal .modal__address-form .d-flex {
